--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,6 +2,24 @@
 <html>
   <head>
     <title>web-components</title>
+    <script>
+      function calcRem () {
+        var deviceWidth = document.documentElement.clientWidth;
+        if (deviceWidth > 640) {
+            deviceWidth = 640;
+        } else if (deviceWidth < 320) {
+          deviceWidth = 320;
+        }
+        if (navigator.userAgent && navigator.userAgent.indexOf('iPad') > -1) {
+          deviceWidth = document.documentElement.clientWidth;
+        }
+        document.documentElement.style.fontSize = deviceWidth / 3.75 + 'px';
+      }
+      calcRem();
+      window.onresize = function () {
+        calcRem()
+      }
+    </script>
   </head>
   <body>
     <my-button></my-button>
