--- a/src/public/index.html
+++ b/src/public/index.html
@@ -22,6 +22,8 @@
     </script>
   </head>
   <body>
-    <tmp-button></tmp-button>
+    <tmp-button type="main">
+      <div slot="btn-content">测试 slot</div>
+    </tmp-button>
   </body>
 </html>
