--- a/src/public/index.html
+++ b/src/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <tmp-button type="main">
-      <div slot="btn-content">测试 slot</div>
+      <div slot="btn-content">测试 xx slot</div>
     </tmp-button>
   </body>
 </html>
